# fim

./: .gitignore  Cargo.toml  README.md  example.conf  todo.md
src/: editor.rs  main.rs
src/configuration/: mod.rs
src/editor/: buffer.rs  mod.rs
src/renderer/: buffer_utils.rs  camera.rs  cursor_renderer.rs  font_manager.rs  index_buffer.rs  mod.rs  primitive_renderer.rs  shader.rs  text_renderer.rs  vertex_array.rs  vertex_buffer.rs
src/shaders/: bezier.vert  circle.frag  circle.vert  cursor.frag  cursor.vert  font.frag  font.vert  primitive.frag  quad.vert
